Bug: Modal now works on smaller screens

--- a/src/components/Dashboard/SetupModal/SetupModal.css
+++ b/src/components/Dashboard/SetupModal/SetupModal.css
@@ -18,8 +18,8 @@
   padding: 20px;
   border: 1px solid #888;
   width: 80%;
-  height: 670px;
-  overflow: auto;
+  height: 65%;
+  overflow: scroll;
   border-radius: 5px;
 }
 
@@ -39,6 +39,8 @@
 }
 
 .submit-button {
+  font-size: 1.3rem;
+  font-weight: bold;
   background-color: var(--button-color);
   border-radius: 2px;
   border: none;
@@ -47,6 +49,7 @@
   margin-right: auto;
   margin-top: 20px;
   cursor: pointer;
+  padding: 10px 20px 10px 20px;
 }
 
 .submit-button:hover {
